--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint-config-next": "13.4.6",
     "firebase": "^9.22.2",
     "next": "13.4.6",
+    "protobufjs": "^7.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "semver": "^7.5.4",
     "typescript": "5.1.3"
   },
   "devDependencies": {
